@@ -538,13 +538,16 @@ class GedcomRecord {
 	}
 
 	// Extract/format the first fact from a list of facts.
-	function format_first_major_fact($facts) {
+	function format_first_major_fact($facts, $style) {
 		global $factarray;
 		foreach (explode('|', $facts) as $fact) {
 			foreach ($this->getAllEvents($fact) as $factrec) {
 				// Only display if it has a date or place (or both)
 				if (preg_match('/^2 (DATE|PLAC) (.+)/m', $factrec)) {
-					return '<br /><i>'.$factarray[$fact].' '.format_fact_date($factrec).format_fact_place($factrec).'</i>';
+					switch ($style) {
+					case 1: return '<br /><i>'.$factarray[$fact].' '.format_fact_date($factrec).format_fact_place($factrec).'</i>';
+					case 2: return '<span class="label">'.$factarray[$fact].':</span> <span class="field">'.format_fact_date($factrec).format_fact_place($factrec).'</span><br />';
+					}
 				}
 			}
 		}
